# terminus

./: ARCHITECTURE.md  README.md  pyproject.toml
src/terminus/: __init__.py  __main__.py  agent.py  commands.py  constants.py  deps.py  models.py  persistence.py  repl.py  session.py  setup.py
src/terminus/core/: __init__.py  agent.py  session.py
src/terminus/infrastructure/: __init__.py
src/terminus/interface/: __init__.py
src/terminus/tools/: calendar.py  (+7 more)
terminus-cli/: ARCHITECTURE.md  README.md  pyproject.toml
terminus-cli/src/terminus/: __main__.py
terminus-cli/src/terminus/core/: __init__.py  agent.py  commands.py  config.py  repl.py  session.py  setup.py
terminus-cli/src/terminus/infrastructure/: __init__.py  models.py  natural_language.py  persistence.py  state_manager.py
terminus-cli/src/terminus/interfaces/: __init__.py  tool_interfaces.py
terminus-cli/src/terminus/prompts/: system.txt
terminus-cli/src/terminus/tools/: wrapper.py
terminus-cli/src/terminus/tools/analysis/: __init__.py  code_analysis.py  code_review.py  code_reviewer.py
terminus-cli/src/terminus/tools/dev_tools/: __init__.py  dev_workflow.py  git.py  help_system.py  project_automation.py  run_command.py  system_utilities.py
terminus-cli/src/terminus/tools/file_ops/: __init__.py  directory.py  file_discovery.py  find.py  grep.py  list.py  read_file.py  update_file.py
terminus-cli/src/terminus/tools/integrations/: __init__.py  calendar.py  gmail.py  google_setup.py
terminus-cli/src/terminus/ui/: core.py  messages.py
terminus-cli/src/terminus/utils/: guide.py  logger.py
(+34 files in other folders)
